--- a/src/app/header/shopping/shopping-list-edit/shopping-list-edit.component.html
+++ b/src/app/header/shopping/shopping-list-edit/shopping-list-edit.component.html
@@ -1,1 +1,19 @@
-<p>shopping-list-edit works!</p>
+<div class="row">
+  <div class="col-xs-12">
+    <form>
+      <div class="row">
+        <div class="col-sm-5">
+          <label for="name">Name</label>
+          <input type="text" id="name" class="form-control">
+        </div>
+      </div>
+      <div class="row">
+        <div class="col-xs-12">
+          <button class="btn btn-success" type="submit">Add</button>
+          <button class="btn btn-danger" type="submit">Delete Item</button>
+          <button class="btn btn-primary" type="submit">Clear</button>
+        </div>
+      </div>
+    </form>
+  </div>
+</div>
