--- a/src/app/header/recipeBook/recipe-detail/recipe-detail.component.html
+++ b/src/app/header/recipeBook/recipe-detail/recipe-detail.component.html
@@ -1,6 +1,10 @@
 <div class="row">
   <div class="col-xs-12">
-  <img [src]="recipe.imagePath" alt="{{ recipe.name }}" class="img-responsive">
+  <img
+  [src]="recipe.imagePath"
+  alt="{{ recipe.name }}"
+  class="img-responsive"
+  style="max-height: 300px;">
   </div>
 </div>
 <div class="row">
@@ -11,7 +15,7 @@
 <div class="row">
   <div class="col-xs-12">
     <div class="btn-group">
-      <button type="btn btn-primary dropdown-toggle">Manage Recipe <span class="caret"></span></button>
+      <button type="button" class="btn btn-primary dropdown-toggle">Manage Recipe <span class="caret"></span></button>
       <ul class="dropdown-menu">
         <li><a href="#">To Shopping List</a></li>
         <li><a href="#">Edit Recipe</a></li>
